Добавляє розмітку Портфолио

--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!-- шапка -->
     <header>
-        <a href="">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <nav>
             <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
@@ -55,13 +60,13 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./images/img1.jpg" alt="компьютер" width="294">
+                    <img src="./images/index/img1.jpg" alt="компьютер" width="294">
                 </li>
                 <li>
-                    <img src="./images/img2.jpg" alt="телефон" width="294">
+                    <img src="./images/index/img2.jpg" alt="телефон" width="294">
                 </li>
                 <li>
-                    <img src="./images/img3.jpg" alt="планшет" width="294">
+                    <img src="./images/index/img3.jpg" alt="планшет" width="294">
                 </li>
             </ul>
         </section>
@@ -70,22 +75,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/img4.jpg" alt="Игорь Демьяненко" width="260">
+                    <img src="./images/index/img4.jpg" alt="Игорь Демьяненко" width="260">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/img5.jpg" alt="Ольга Репина" width="260">
+                    <img src="./images/index/img5.jpg" alt="Ольга Репина" width="260">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/img6.jpg" alt="Николай Тарасов" width="260">
+                    <img src="./images/index/img6.jpg" alt="Николай Тарасов" width="260">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img7.jpg" alt="Михаил Ермаков" width="260">
+                    <img src="./images/index/img7.jpg" alt="Михаил Ермаков" width="260">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
