--- a/portfolio.html
+++ b/portfolio.html
@@ -13,25 +13,25 @@
 </head>
 <body>
     <!-- шапка -->
-    <header>
-        <a href="./index.html">WebStudio</a>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+    <header class="header">
+        <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
+        <nav class="nav">
+            <ul class="list">
+                <li><a class="link" href="./index.html">Студия</a></li>
+                <li><a class="link link-current" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="list">
+            <li><a class="link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <!-- Примеры работ -->
         <section>
             <h1>Примеры работ</h1>
-            <ul>
+            <ul  class="list">
                 <li>
                     <button type="button">Все</button>
                 </li>
@@ -49,65 +49,65 @@
                 </li>
 
             </ul>
-            <ul>
+            <ul class="list">
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/portfolio/img1.jpg" alt="Веб-сайт" width="370px">
                         <h2>Технокряк</h2>
                         <p>Веб-сайт</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/portfolio/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370px">
                         <h2>Постер New Orlean vs Golden Star</h2>
                         <p>Дизайн</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/portfolio/img3.jpg" alt="Лого ресторана Seafood" width="370px">
                         <h2>Ресторан Seafood</h2>
                         <p>Приложение</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370px">
                         <h2>Проект Prime</h2>
                         <p>Маркетинг</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/portfolio/img5.jpg" alt="Два ящика" width="370px">
                         <h2>Проект Boxes</h2>
                         <p>Приложение</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/portfolio/img6.jpg" alt="Монитор" width="370px">
                         <h2>Inspiration has no Borders</h2>
                         <p>Веб-сайт</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/portfolio/img7.jpg" alt="Журнал" width="370px">
                         <h2>Издание Limited Edition</h2>
                         <p>Дизайн</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/portfolio/img8.jpg" alt="Бирка" width="370px">
                         <h2>Проект LAB</h2>
                         <p>Маркетинг</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./images/portfolio/img9.jpg" alt="Ноутбук" width="370px">
                         <h2>Growing Business</h2>
                         <p>Приложение</p>
@@ -118,13 +118,13 @@
         </section>
     </main>
     <!-- Подвал -->
-    <footer>
-        <a href="">WebStudio</a>
+    <footer class="footer">
+        <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
         <address>
-            <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <ul class="list">
+                <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
+                <li><a class="link contacts" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a class="link contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
