Добавляє стиль активної вкладки в index.html

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
         <nav class="nav">
             <ul class="list">
-                <li><a class="link" href="./index.html">Студия</a></li>
-                <li><a class="link link-current" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link link-current" href="./index.html">Студия</a></li>
+                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
