Добавляє стилі до блоку main

--- a/index.html
+++ b/index.html
@@ -32,35 +32,35 @@
     </header>
     <main>
         <!-- Герой -->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1 class="title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="btn">Заказать услугу</button>
         </section>
         <!-- Преимущества -->
-        <section>
+        <section class="feature">
             <h2>Преимущества</h2>
             <ul class="list">
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="title">Внимание к деталям</h3>
+                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="title">Пунктуальность</h3>
+                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="title">Планирование</h3>
+                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="title">Современные технологии</h3>
+                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <!-- Направления работы -->
-        <section>
-            <h2>Чем мы занимаемся</h2>
+        <section class="services">
+            <h2 class="title">Чем мы занимаемся</h2>
             <ul class="list">
                 <li>
                     <img src="./images/index/img1.jpg" alt="компьютер" width="294">
@@ -74,28 +74,28 @@
             </ul>
         </section>
         <!-- Сотрудники -->
-        <section>
-            <h2>Наша команда</h2>
+        <section class="team">
+            <h2 class="title">Наша команда</h2>
             <ul class="list">
-                <li>
+                <li class="item">
                     <img src="./images/index/img4.jpg" alt="Игорь Демьяненко" width="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="name">Игорь Демьяненко</h3>
+                    <p class="text">Product Designer</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images/index/img5.jpg" alt="Ольга Репина" width="260">
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="name">Ольга Репина</h3>
+                    <p class="text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images/index/img6.jpg" alt="Николай Тарасов" width="260">
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="name">Николай Тарасов</h3>
+                    <p class="text">Marketing</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images/index/img7.jpg" alt="Михаил Ермаков" width="260">
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="name">Михаил Ермаков</h3>
+                    <p class="text">UI Designer</p>
                 </li>
             </ul>
         </section>
