--- a/portfolio.html
+++ b/portfolio.html
@@ -33,84 +33,84 @@
             <h1>Примеры работ</h1>
             <ul  class="list">
                 <li>
-                    <button type="button">Все</button>
+                    <button type="button" class="btn">Все</button>
                 </li>
                 <li>
-                    <button type="button">Веб-сайты</button>
+                    <button type="button" class="btn">Веб-сайты</button>
                 </li>
                 <li>
-                    <button type="button">Приложения</button>
+                    <button type="button" class="btn">Приложения</button>
                 </li>
                 <li>
-                    <button type="button">Дизайн</button>
+                    <button type="button" class="btn">Дизайн</button>
                 </li>
                 <li>
-                    <button type="button">Маркетинг</button>
+                    <button type="button" class="btn">Маркетинг</button>
                 </li>
 
             </ul>
-            <ul class="list">
-                <li>
+            <ul class="list project">
+                <li class="item">
                     <a class="link" href="">
-                        <img src="./images/portfolio/img1.jpg" alt="Веб-сайт" width="370px">
-                        <h2>Технокряк</h2>
-                        <p>Веб-сайт</p>
+                        <img src="./images/portfolio/img1.jpg" alt="Веб-сайт" width="370">
+                        <h2 class="project-name">Технокряк</h2>
+                        <p class="project-type">Веб-сайт</p>
                     </a>
                 </li>
-                <li>
+                <li class="item">
                     <a class="link" href="">
-                        <img src="./images/portfolio/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370px">
-                        <h2>Постер New Orlean vs Golden Star</h2>
-                        <p>Дизайн</p>
+                        <img src="./images/portfolio/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                        <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+                        <p class="project-type">Дизайн</p>
                     </a>
                 </li>
-                <li>
+                <li class="item">
                     <a class="link" href="">
-                        <img src="./images/portfolio/img3.jpg" alt="Лого ресторана Seafood" width="370px">
-                        <h2>Ресторан Seafood</h2>
-                        <p>Приложение</p>
+                        <img src="./images/portfolio/img3.jpg" alt="Лого ресторана Seafood" width="370">
+                        <h2 class="project-name">Ресторан Seafood</h2>
+                        <p class="project-type">Приложение</p>
                     </a>
                 </li>
-                <li>
+                <li class="item">
                     <a class="link" href="">
-                        <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370px">
-                        <h2>Проект Prime</h2>
-                        <p>Маркетинг</p>
+                        <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370">
+                        <h2 class="project-name">Проект Prime</h2>
+                        <p class="project-type">Маркетинг</p>
                     </a>
                 </li>
-                <li>
+                <li class="item">
                     <a class="link" href="">
-                        <img src="./images/portfolio/img5.jpg" alt="Два ящика" width="370px">
-                        <h2>Проект Boxes</h2>
-                        <p>Приложение</p>
+                        <img src="./images/portfolio/img5.jpg" alt="Два ящика" width="370">
+                        <h2 class="project-name">Проект Boxes</h2>
+                        <p class="project-type">Приложение</p>
                     </a>
                 </li>
-                <li>
+                <li class="item">
                     <a class="link" href="">
-                        <img src="./images/portfolio/img6.jpg" alt="Монитор" width="370px">
-                        <h2>Inspiration has no Borders</h2>
-                        <p>Веб-сайт</p>
+                        <img src="./images/portfolio/img6.jpg" alt="Монитор" width="370">
+                        <h2 class="project-name">Inspiration has no Borders</h2>
+                        <p class="project-type">Веб-сайт</p>
                     </a>
                 </li>
-                <li>
+                <li class="item">
                     <a class="link" href="">
-                        <img src="./images/portfolio/img7.jpg" alt="Журнал" width="370px">
-                        <h2>Издание Limited Edition</h2>
-                        <p>Дизайн</p>
+                        <img src="./images/portfolio/img7.jpg" alt="Журнал" width="370">
+                        <h2 class="project-name">Издание Limited Edition</h2>
+                        <p class="project-type">Дизайн</p>
                     </a>
                 </li>
-                <li>
+                <li class="item">
                     <a class="link" href="">
-                        <img src="./images/portfolio/img8.jpg" alt="Бирка" width="370px">
-                        <h2>Проект LAB</h2>
-                        <p>Маркетинг</p>
+                        <img src="./images/portfolio/img8.jpg" alt="Бирка" width="370">
+                        <h2 class="project-name">Проект LAB</h2>
+                        <p class="project-type">Маркетинг</p>
                     </a>
                 </li>
-                <li>
+                <li class="item">
                     <a class="link" href="">
-                        <img src="./images/portfolio/img9.jpg" alt="Ноутбук" width="370px">
-                        <h2>Growing Business</h2>
-                        <p>Приложение</p>
+                        <img src="./images/portfolio/img9.jpg" alt="Ноутбук" width="370">
+                        <h2 class="project-name">Growing Business</h2>
+                        <p class="project-type">Приложение</p>
                     </a>
                 </li>
                 
