Добавляє оптимізацію стилів

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <!-- шапка -->
+    <!-- Шапка -->
     <header class="header">
         <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
         <nav class="nav">
@@ -27,9 +27,10 @@
             <li><a class="link contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
+    <!-- Основная часть -->
     <main>
         <!-- Примеры работ -->
-        <section>
+        <section class="examples">
             <h1>Примеры работ</h1>
             <ul  class="list">
                 <li>
@@ -49,7 +50,7 @@
                 </li>
 
             </ul>
-            <ul class="list project">
+            <ul class="list">
                 <li class="item">
                     <a class="link" href="">
                         <img src="./images/portfolio/img1.jpg" alt="Веб-сайт" width="370">
@@ -120,9 +121,9 @@
     <!-- Подвал -->
     <footer class="footer">
         <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
-        <address>
+        <address class="address">
             <ul class="list">
-                <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
+                <li >г. Киев, пр-т Леси Украинки, 26</li>
                 <li><a class="link contacts" href="mailto:info@example.com">info@example.com</a></li>
                 <li><a class="link contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
