--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Портфолио</title>
+    <title>Студия</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <!-- шапка -->
+    <!-- Шапка -->
     <header class="header">
         <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
         <nav class="nav">
@@ -30,6 +30,7 @@
             <li><a class="link contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
+    <!-- Основная часть -->
     <main>
         <!-- Герой -->
         <section class="hero">
@@ -103,14 +104,13 @@
     <!-- Подвал -->
     <footer class="footer">
         <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
-        <address>
+        <address class="address">
             <ul class="list">
-                <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
+                <li>г. Киев, пр-т Леси Украинки, 26</li>
                 <li><a class="link contacts" href="mailto:info@example.com">info@example.com</a></li>
                 <li><a class="link contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
 </body>
-    
 </html>
