Добавляє оптимізацію стилів після перевірки ДЗ

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Шапка -->
     <header class="header">
-        <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
+        <a class="link logo" href="./index.html"><span class="web">Web</span>Studio</a>
         <nav class="nav">
             <ul class="list">
                 <li><a class="link link-current" href="./index.html">Студия</a></li>
@@ -60,8 +60,8 @@
             </ul>
         </section>
         <!-- Направления работы -->
-        <section class="services">
-            <h2 class="title">Чем мы занимаемся</h2>
+        <section>
+            <h2 class="services">Чем мы занимаемся</h2>
             <ul class="list">
                 <li>
                     <img src="./images/index/img1.jpg" alt="компьютер" width="294">
@@ -103,7 +103,7 @@
     </main>
     <!-- Подвал -->
     <footer class="footer">
-        <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
+        <a class="link logo" href="./index.html"><span class="web">Web</span>Studio</a>
         <address class="address">
             <ul class="list">
                 <li>г. Киев, пр-т Леси Украинки, 26</li>
