--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Шапка -->
     <header class="header">
-        <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
+        <a class="link logo" href="./index.html"><span class="web">Web</span>Studio</a>
         <nav class="nav">
             <ul class="list">
                 <li><a class="link" href="./index.html">Студия</a></li>
@@ -34,7 +34,7 @@
             <h1>Примеры работ</h1>
             <ul  class="list">
                 <li>
-                    <button type="button" class="btn">Все</button>
+                    <button type="button" class="btn default">Все</button>
                 </li>
                 <li>
                     <button type="button" class="btn">Веб-сайты</button>
@@ -120,7 +120,7 @@
     </main>
     <!-- Подвал -->
     <footer class="footer">
-        <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
+        <a class="link logo" href="./index.html"><span class="web">Web</span>Studio</a>
         <address class="address">
             <ul class="list">
                 <li >г. Киев, пр-т Леси Украинки, 26</li>
